<project xmlns="http://maven.apache.org/POM/4.0.0"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>com.visionit</groupId>
	<artifactId>CanBeDeleted</artifactId>
	<version>0.0.1-SNAPSHOT</version>

	<properties>
		<cucumber.version>4.2.0</cucumber.version>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<maven.compiler.source>1.8</maven.compiler.source>
		<maven.compiler.target>1.8</maven.compiler.target>
	</properties>

	<build>
		<plugins>
			<plugin>
				<artifactId>maven-surefire-plugin</artifactId>
				<version>3.0.0-M1</version>
				<configuration>
					<parallel>methods</parallel>
					<threadCount>2</threadCount>
					<perCoreThreadCount>false</perCoreThreadCount>
					<!-- <useUnlimitedThreads>true</useUnlimitedThreads> -->
					<argLine>-Xmx1024m -XX:MaxPermSize=256m</argLine>
				</configuration>
			</plugin>
		</plugins>
	</build>

	<!-- For Cucumber -->
	<!-- https://mvnrepository.com/artifact/io.cucumber/cucumber-java -->
	<dependencies>
		<dependency>
			<groupId>io.cucumber</groupId>
			<artifactId>cucumber-java</artifactId>
			<version>5.5.0</version>
		</dependency>
		<!-- https://mvnrepository.com/artifact/junit/junit -->
		<dependency>
			<groupId>junit</groupId>
			<artifactId>junit</artifactId>
			<version>4.13</version>
			<!-- <scope>test</scope> -->
		</dependency>
		<!-- https://mvnrepository.com/artifact/io.cucumber/cucumber-junit -->
		<dependency>
			<groupId>io.cucumber</groupId>
			<artifactId>cucumber-junit</artifactId>
			<version>5.5.0</version>
		</dependency>

		<dependency>
			<groupId>tech.grasshopper</groupId>
			<artifactId>extentreports-cucumber5-adapter</artifactId>
			<version>2.6.0</version>
			<scope>test</scope>
		</dependency>

		<!-- https://mvnrepository.com/artifact/org.seleniumhq.selenium/selenium-java -->
		<!-- <dependency> -->
		<!-- <groupId>org.seleniumhq.selenium</groupId> -->
		<!-- <artifactId>selenium-java</artifactId> -->
		<!-- <version>4.0.0-alpha-5</version> -->
		<!-- </dependency> -->
		<dependency>
			<groupId>io.github.bonigarcia</groupId>
			<artifactId>webdrivermanager</artifactId>
			<version>3.8.1</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.seleniumhq.selenium</groupId>
			<artifactId>selenium-java</artifactId>
			<version>3.141.59</version>
			<scope>test</scope>
		</dependency>
		<!-- https://mvnrepository.com/artifact/com.github.ralfstuckert.pdfbox-layout/pdfbox2-layout -->
		<dependency>
			<groupId>com.github.ralfstuckert.pdfbox-layout</groupId>
			<artifactId>pdfbox2-layout</artifactId>
			<version>1.0.0</version>
		</dependency>

	</dependencies>

	<repositories>
		<repository>
			<id>mulesoft-pdfbox2-layout</id>
			<name>MuleSoft pdfbox2-layout Repository</name>
			<url>https://repository.mulesoft.org/nexus/content/repositories/public/</url>
		</repository>

	</repositories>

</project>